﻿Step 1: Initializing project documentation and design
Step 2: Created interactive mobile mockup and demonstrated real-time locking logic
Step 3: Initializing project directories and database schema
Step 4: Developed core application modules including Real-time hooks, UI components, and Setup documentation
Step 5: Implemented Local-Only alternative storage logic and updated documentation
Step 6: Implemented full Dark Theme across simulator and core UI components
Step 7: Reimagined hydration tracking with a dynamic Glass of Water filling animation
Step 8: Implemented production core modules: Persistent Auth, Push Notifications, Team Invitation service, and live Medication management
Step 9: Version 3.3.0 Release - Added "As Needed" medications, Skip Dose functionality, Custom Hydration Goals, and Delete Individual Logs
Step 10: Version 3.4.0 Release - Added Drag-and-Drop medication reordering, Mobile-friendly UI improvements, Status badges moved to top-left, "8 oz" spacing fix, Mandatory medication flag with Yes/No dialog, and Real-time refresh across devices.
Step 11: Version 3.4.1 Patch - Fixed medication positioning logic (new items at top), corrected "8 oz" button spacing in web app, and resolved schema cache issues.